--- a/src/app/room-reservation/common-nav-bar/common-nav-bar.component.html
+++ b/src/app/room-reservation/common-nav-bar/common-nav-bar.component.html
@@ -3,6 +3,7 @@
       <div>
         <a mat-button (click)="routerNavigate('user/dashboard/mybooking')"> My Booking </a>
         <a mat-button (click)="routerNavigate('user/dashboard/reservation')"> Registration </a>
+        <a mat-button (click)="routerNavigate('user/dashboard/createroom')"> Create Room </a>
         <a mat-button class="logout" (ckick)="logOut()"> Logout </a>
       </div>
  
