--- a/src/app/room-reservation/reservation/reservation.component.html
+++ b/src/app/room-reservation/reservation/reservation.component.html
@@ -24,7 +24,7 @@
                     (click)="displayRooms()">Display Rooms</button>
 </div>
 <br>
-<div *ngIf="DateErrorMessage" class="errorMessageDate"> End Date should be greater than Start date</div>
+<div *ngIf="DateErrorMessage" class="errorMessageDate">{{tablemessage}}</div>
 <div  *ngIf="displaySelectedRoom && !DateErrorMessage">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -45,15 +45,16 @@
         
     
         <!-- From Date Column -->
-        <ng-container matColumnDef="fromDate">
-        <th mat-header-cell *matHeaderCellDef> From Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.fromDate}} </td>
+        <ng-container matColumnDef="roomNbr">
+        <th mat-header-cell *matHeaderCellDef> Room Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.roomNbr}} </td>
         </ng-container>
     
         <!-- ToDate Column -->
-        <ng-container matColumnDef="toDate">
-        <th mat-header-cell *matHeaderCellDef> To Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.toDate}} </td>
+        <ng-container matColumnDef="isBooking">
+        <th mat-header-cell *matHeaderCellDef> isBooked </th>
+        <td mat-cell *matCellDef="let element"> <button (click)="bookRoom(element)" mat-button color="primary" [disabled]="element.isBooked">Booking</button> </td>
+        <p *ngif="element.isBooked">{{roomBooked}}</p>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
